--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -17,7 +17,7 @@
   "templates": "шаблони",
   "notImplemented": "Не реалізовано ",
   "saveChanges": "Зберегти зміни ",
-  "discardChanges": "Відмінити зміни ",
+  "discardChanges": "Відкинути зміни",
   "advanced": "Додатково ",
   "shortcuts": "Гарячі клавіші ",
   "help": "Допомога ",
@@ -91,16 +91,16 @@
   "footerTitleLock": "Заблокувати",
   "genLen": "Довжина ",
   "genNewPass": "Новий пароль ",
-  "genPresetDefault": "стандартні налаштування ",
-  "genPresetDerived": "як старий пароль",
-  "genPresetPronounceable": "легкомовний ",
-  "genPresetMed": "середньої довжини",
-  "genPresetLong": "довгий ",
+  "genPresetDefault": "Cтандартний шаблон",
+  "genPresetDerived": "Як старий пароль",
+  "genPresetPronounceable": "Вимовлюваний",
+  "genPresetMed": "Середньої довжини",
+  "genPresetLong": "Довгий",
   "genPresetPin4": "4-значний PIN-код",
   "genPresetMac": "MAC-адреса",
   "genPresetHash128": "128-бітний хеш",
   "genPresetHash256": "256-бітний хеш",
-  "genHidePass": "Зховати пароль",
+  "genHidePass": "Сховати пароль",
   "genShowPass": "Показати пароль",
   "grpTitle": "Група ",
   "grpSearch": "Увімкнути пошук записів у цій групі",
@@ -108,13 +108,13 @@
   "grpAutoTypeSeq": "Послідовність автовведення",
   "grpAutoTypeSeqDefault": "Використовувати типову послідовність автовведення",
   "grpTrash": "Видалити групу з усіма елементами",
-  "tagTitle": "Тег",
-  "tagTrash": "Видалити тег з усіх записів",
+  "tagTitle": "Мітка",
+  "tagTrash": "Видалити мітку з усіх записів",
   "tagRename": "Перейменовувати",
-  "tagTrashQuestion": "Видалити тег з усіх записів?",
-  "tagTrashQuestionBody": "Цей тег буде видалений з усіх записів. І не буде простого способу повернути його назад.",
-  "tagExists": "Тег вже існує",
-  "tagExistsBody": "Тег з такою назвою вже існує. Будь ласка, оберіть іншу назву.",
+  "tagTrashQuestion": "Видалити мітку з усіх записів?",
+  "tagTrashQuestionBody": "Ця мітка буде видалена з усіх записів. І не буде простого способу повернути його назад.",
+  "tagExists": "Мітка вже існує",
+  "tagExistsBody": "Мітка з такою назвою вже існує. Будь ласка, оберіть іншу назву.",
   "tagBadName": "Погана назва",
   "tagBadNameBody": "Назва мітки не може містити символи: {}. Будь ласка, приберіть їх.",
   "genPsTitle": "Генератор шаблонів",
@@ -129,7 +129,7 @@
   "genPsDigits": "Цифри",
   "genPsSpecial": "Спеціальні символи",
   "genPsBrackets": "Дужки",
-  "genPsHigh": "Символи ASCII",
+  "genPsHigh": "Символи розширеного ASCII",
   "genPsAmbiguous": "Неоднозначні символи",
   "genPsInclude": "Додаткові символи",
   "genPsExample": "Приклад згенерованого пароля",
@@ -142,7 +142,7 @@
   "keyChangeTitleExpired": "Термін дії головного пароля завершився",
   "keyChangeMessageExpired": "Термін дії головного пароля цієї бази паролів завершився. Будь ласка, введіть новий пароль",
   "keyChangeRepeatPassword": "Пароль ще раз",
-  "keyEnter": "Вхід",
+  "keyEnter": "Enter",
   "keyEsc": "Esc",
   "iconFavTitle": "Завантажити піктограму вебсайту",
   "iconSelCustom": "Обрати власну піктограму",
@@ -156,10 +156,10 @@
   "listAddTemplateBody1": "Шаблони дозволяють створювати записи одним натисканням миші. Додайте щось в шаблон, а потім натисніть {} ще раз, щоб використати цей шаблон.",
   "listAddTemplateBody2": "Ви завжди можете знайти свої шаблони в групі {}.",
   "searchAddNew": "Додати новий",
-  "searchSort": "Сортувати",
+  "searchSort": "Сортування",
   "searchCreated": "Створено",
   "searchUpdated": "Оновлено",
-  "searchAttachments": "Вкладання",
+  "searchAttachments": "Вкладення",
   "searchAZ": "А {} Я",
   "searchZA": "Я {} А",
   "searchON": "Старий {} Новий",
@@ -177,16 +177,16 @@
   "openOpen": "Відкрити",
   "openNew": "Створити",
   "openNewFile": "Новий",
-  "openMore": "Ще варіанти",
-  "openDemo": "Демо",
+  "openMore": "Більше",
+  "openDemo": "Демонстрація",
   "openGenerate": "Генерувати",
-  "openXml": "Імпортуват XML",
+  "openXml": "Імпортувати XML",
   "openCaps": "Caps Lock увімкнено",
   "openClickToOpen": "Натисніть, щоб відкрити файл",
-  "openKeyFile": "Ключовий файл",
+  "openKeyFile": "Файл-ключ",
   "openKeyFileDropbox": "(із Dropbox)",
   "openDropHere": "перетягніть файли сюди",
-  "openFailedRead": "Не вдалося розпізнати файл",
+  "openFailedRead": "Не вдалося прочитати файл",
   "openNothingFound": "Нічого не знайдено",
   "openNothingFoundBody": "Немає файлів, які могли б бути відкриті.",
   "openSelectFile": "Оберіть файл",
@@ -203,7 +203,7 @@
   "openKdbFileBody": "Ви намагаєтеся відкрити старий формат файлу (KDB). Ця програма підтримує тільки новий формат (kdbx). Скористайтеся KeePass v2 для конвертації в новий формат.",
   "openConfigHeader": "Налаштування {}",
   "openUrl": "URL",
-  "openUrlDesc": "https://server/path/file.kdbx, или просто file.kdbx",
+  "openUrlDesc": "https://сервер/шлях/файл.kdbx або просто файл.kdbx",
   "openUser": "Логін",
   "openUserDesc": "Користувач WebDAV (якщо потрібно)",
   "openUserPlaceholder": "немає логіну",
@@ -224,7 +224,7 @@
   "openChalRespSelectYubiKey": "Оберіть YubiKey, який ви бажаєте використовувати",
   "openChalRespErrorEmpty": "Не знайдено жодного YubiKey",
   "openChalRespErrorEmptyMac": "Вперше використовуєте цю функцію на macOS? KeeWeb необхідно додати до розділу спостереження введення в параметрах безпеки.",
-  "detAttDownload": "Натисніть Shift і клацніть по вкладенню, щоб завантажити його, або",
+  "detAttDownload": "Затисніть Shift і клацніть по вкладенню, щоб завантажити його, або натисніть",
   "detAttDelToRemove": "Delete для видалення",
   "detAttSave": "Зберегти як ...",
   "detEmpty": "Тут будуть показані ваші паролі",
