--- a/docs/translations/zh-TW/zh-TW.json
+++ b/docs/translations/zh-TW/zh-TW.json
@@ -47,6 +47,7 @@
   "menuColors": "顏色",
   "menuTrash": "回收桶",
   "menuSetGeneral": "一般",
+  "menuSetBrowser": "瀏覽器",
   "menuSetAbout": "關於",
   "menuSetDevices": "裝置",
   "menuAlertNoTags": "無標籤",
@@ -58,7 +59,9 @@
   "menuRestoreApp": "開啟 {}",
   "menuQuitApp": "離開 {}",
   "sysMenuAboutKeeWeb": "關於 {}",
+  "sysMenuServices": "服務",
   "sysMenuHide": "隱藏 {}",
+  "sysMenuHideOthers": "隱藏其他視窗",
   "sysMenuUnhide": "全部顯示",
   "sysMenuQuit": "離開 {}",
   "sysMenuEdit": "編輯",
@@ -79,6 +82,8 @@
   "alertCopy": "複製",
   "alertClose": "關閉",
   "alertDoNotAsk": "不再詢問",
+  "alertAllow": "允許",
+  "alertDeny": "拒絕",
   "appBeta": "警告：測試版本，僅供預覽。",
   "footerOpen": "打開 / 新建",
   "footerSyncError": "同步錯誤",
@@ -131,111 +136,118 @@
   "genPsPatternHelp": "您可以使用Pattern作為生成密碼時的一組特定規則。例如，「1-AA」會根據「以一個數字為開頭，接著一個『-』符號，再接著兩個字母」的規則來產生密碼。您可以使用的符號如下：",
   "genPsAllRanges": "任意字符",
   "keyChangeTitleRemote": "主密鑰已更改",
-  "keyChangeMessageRemote": "此數據庫的主密鑰已更改,請輸入新密鑰.",
+  "keyChangeMessageRemote": "此資料庫的主密鑰已更改，請輸入新的密鑰。",
   "keyChangeTitleExpired": "主密鑰已過期",
-  "keyChangeMessageExpired": "該密碼數據庫密鑰已過期,請輸入新密鑰.",
-  "keyChangeRepeatPassword": "再輸入一遍密碼",
+  "keyChangeMessageExpired": "此資料庫的主密鑰已過期，請輸入新的密鑰。",
+  "keyChangeRepeatPassword": "再次輸入密碼",
   "keyEnter": "輸入",
-  "iconFavTitle": "下載並使用站點圖標",
-  "iconSelCustom": "選擇自定義圖標",
+  "keyEsc": "Esc",
+  "iconFavTitle": "下載並使用網站圖標",
+  "iconSelCustom": "選擇自定義圖示",
   "listEmptyTitle": "空",
-  "listEmptyAdd": "點擊 {} 按鈕添加",
-  "listGroup": "分組",
+  "listEmptyAdd": "點擊 {} 按鈕新增",
+  "listGroup": "群組",
   "listNoWebsite": "沒有網站",
-  "listNoUser": "沒有用戶名",
+  "listNoUser": "沒有使用者",
   "listNoAttachments": "沒有附件",
   "listAddTemplateHeader": "範本",
-  "listAddTemplateBody1": "範本容許你一按新增紀錄。在範本紀錄輸入資料，然後按 {} 就可再使用這個範本。",
-  "listAddTemplateBody2": "你可以隨時在{}分組內找到你的範本。",
+  "listAddTemplateBody1": "您可以透過範本一鍵新增紀錄。在範本紀錄中輸入資料，然後按 {} 就可以使用這個範本。",
+  "listAddTemplateBody2": "你可以隨時在「{}」群組內找到你的範本。",
   "searchAddNew": "新增",
   "searchSort": "排序",
-  "searchCreated": "創建時間",
-  "searchUpdated": "更新日期",
+  "searchCreated": "建立時間",
+  "searchUpdated": "更新時間",
   "searchAttachments": "附件",
   "searchAZ": "從 A {} Z",
   "searchZA": "從 Z {} A",
   "searchON": "從舊 {} 新",
   "searchNO": "從新 {} 舊",
   "searchShiftClickOr": "按住Shift+點擊 或",
-  "searchAdvTitle": "切換高級搜索",
-  "searchSearchIn": "搜索範圍",
-  "searchOther": "其他字段",
+  "searchAdvTitle": "切換進階搜尋",
+  "searchSearchIn": "搜尋範圍",
+  "searchOther": "其他欄位",
   "searchProtect": "安全字段",
   "searchOptions": "選項",
   "searchCase": "區分大小寫",
   "searchRegex": "正規表達式",
-  "searchExact": "精確",
+  "searchRank": "自動",
+  "searchExact": "完全符合",
   "openOpen": "打開",
   "openNew": "新建",
-  "openNewFile": "新項目",
+  "openNewFile": "未命名資料庫",
   "openMore": "更多",
   "openDemo": "展示",
   "openGenerate": "生成",
-  "openXml": "導入 XML",
-  "openCaps": "大寫鎖定 開",
-  "openClickToOpen": "點擊打開文件",
-  "openKeyFile": "密鑰文件",
-  "openKeyFileDropbox": "(從 Dropbox)",
-  "openDropHere": "拖放文件到此處",
-  "openFailedRead": "讀取文件失敗",
+  "openXml": "匯入XML",
+  "openCaps": "大寫鎖定已啟用",
+  "openClickToOpen": "點擊開啟文件",
+  "openKeyFile": "密鑰檔",
+  "openKeyFileDropbox": "（從Dropbox）",
+  "openDropHere": "拖放檔案到此處",
+  "openFailedRead": "讀取檔案失敗",
   "openNothingFound": "找不到內容",
-  "openNothingFoundBody": "沒有可以打開的文件.",
-  "openSelectFile": "選擇文件",
-  "openSelectFileBody": "選擇您想打開的文件",
-  "openPassFor": "輸入密碼",
-  "openRemoveLastQuestion": "刪除本地文件?",
-  "openRemoveLastQuestionBody": "您要刪除的文件僅保存在KeeWeb內部,確認永久刪除嗎?",
-  "openRemoveLastQuestionModBody": "您要刪除的文件已在本地修改,確認放棄修改並刪除嗎?",
-  "openLocalFile": "本地文件",
-  "openLocalFileBody": "您要打開的密碼數據庫將僅保存在KeeWeb中,您所做的變更將不會被保存到密碼數據庫中.如果想要保存您的數據,請從設置面板中導出.",
+  "openNothingFoundBody": "沒有可以開啟的文件。",
+  "openSelectFile": "選擇檔案",
+  "openSelectFileBody": "選擇您想開啟的檔案",
+  "openPassFor": "輸入密碼以開啟",
+  "openRemoveLastQuestion": "是否刪除本地檔案？",
+  "openRemoveLastQuestionBody": "您要刪除的檔案僅保存在KeeWeb中，確定永久刪除嗎？",
+  "openRemoveLastQuestionModBody": "您要刪除的檔案已在本地端做過修改，確定放棄該異動並刪除檔案嗎？",
+  "openLocalFile": "本地檔案",
+  "openLocalFileBody": "您要開啟的檔案將僅保存在KeeWeb中。任何您所造成的異動都不會儲存到檔案系統。若您想要將您的資料儲存為檔案，請在設定中進行匯出。",
   "openLocalFileDontShow": "不再顯示",
-  "openWrongFile": "文件損壞",
-  "openWrongFileBody": "不支持此文件格式,KeeWeb 僅支持 KeePass kdbx 格式的數據庫文件.",
-  "openKdbFileBody": "您打開的是舊版本 KDB 格式的文件,此版本的 KeeWeb 僅支持新的 kdbx 格式,請使用 KeePass v2 轉換格式.",
-  "openConfigHeader": "{} 設置",
+  "openWrongFile": "檔案損毀",
+  "openWrongFileBody": "不支援此檔案格式。KeeWeb僅支援KeePass的資料庫檔案格式（kdbx）。",
+  "openKdbFileBody": "您開啟的是舊版的KeePass資料庫檔案格式（kdb）。KeeWeb僅支援新的KeePass資料庫檔案格式（kdbx），請使用KeePass第二版來轉換格式。",
+  "openConfigHeader": "{}設定",
   "openUrl": "URL",
-  "openUrlDesc": "https://server/path/file.kdbx, 或 file.kdbx",
-  "openUser": "用戶",
-  "openUserDesc": "WebDAV 服務器用戶名(如果需要)",
-  "openUserPlaceholder": "沒有用戶名",
+  "openUrlDesc": "「https://server/path/file.kdbx」，或「file.kdbx」",
+  "openUser": "使用者",
+  "openUserDesc": "WebDAV伺服器使用者名稱（如為必要）",
+  "openUserPlaceholder": "沒有使用者名稱",
   "openPass": "密碼",
-  "openPassDesc": "WebDAV 服務器的密碼(不是您文件的密碼)",
+  "openPassDesc": "WebDAV伺服器的密碼（並非檔案的密碼）",
   "openPassPlaceholder": "沒有密碼",
-  "openConfigError": "錯誤: {}",
-  "openConfigErrorNotFound": "未找到文件",
+  "openConfigError": "錯誤：{}",
+  "openConfigErrorNotFound": "找不到檔案",
   "openError": "錯誤",
-  "openErrorDescription": "文件開啟錯誤",
-  "openErrorFileNotFound": "未找到文件",
-  "openListErrorBody": "開啟檔案資料時發生錯誤",
+  "openErrorDescription": "開啟檔案時發生錯誤",
+  "openErrorDescriptionMaybeTouchIdChanged": "此錯誤與Touch ID設定異動（比如新增或刪除指紋）時所造成的影響十分相似。在這種情況下，可以到設定中將Touch ID停用後再啟用以解決此問題。",
+  "openErrorFileNotFound": "找不到檔案",
+  "openListErrorBody": "讀取檔案清單時發生錯誤",
   "openShowAllFiles": "顯示所有檔案",
-  "openFileNoCacheError": "File 不在快取儲存中。這可能會因瀏覽器的儲存被清除而發生。打開file，從KeeWeb移除它，然後再加入一次。",
-  "detAttDownload": "按住Shift+點擊附件按鈕下載 或",
-  "detAttDelToRemove": "刪除並移除",
+  "openFileNoCacheError": "檔案不存在於快取中。這個情況可能是由瀏覽器存儲資料被清空所引起。將檔案從KeeWeb中刪除後重新加入以開啟此檔案。",
+  "openChalRespLoading": "正在讀取Yubikey清單",
+  "openChalRespSelectYubiKey": "選擇一個您想使用的Yubikey",
+  "openChalRespErrorEmpty": "找不到Yubikey",
+  "openChalRespErrorEmptyMac": "第一次在 macOS 上使用這個功能？安全起見，您必須額外允許 KeeWeb 監控輸入。",
+  "detAttDownload": "按住Shift並點擊附件按鈕以下載或",
+  "detAttDelToRemove": "Delete 以移除",
   "detAttSave": "另存為...",
   "detEmpty": "您的密碼會顯示在這裡",
-  "detGroupRestore": "要恢復分組,請將其從回收站中拖放到任意其它分組",
+  "detGroupRestore": "要回復此群組，請將其從回收桶中拖放到回收桶外的任意群組上",
   "detHistoryClickPoint": "點擊記錄歷史時間軸上的點來查看狀態",
-  "detHistoryReturn": "返回記錄",
-  "detHistoryRevert": "還原到狀態",
+  "detHistoryReturn": "返回紀錄",
+  "detHistoryRevert": "還原到此狀態",
   "detHistoryDel": "刪除此狀態",
   "detHistoryEmpty": "空",
   "detHistoryModified": "已修改",
-  "detHistoryRec": "記錄",
-  "detHistoryRecs": "記錄",
+  "detHistoryRec": "紀錄",
+  "detHistoryRecs": "紀錄",
   "detHistoryVersion": "版本",
-  "detHistorySaved": "已保存",
+  "detHistorySaved": "已儲存",
   "detHistoryNoTitle": "無標題",
   "detHistoryCurState": "當前狀態",
-  "detHistoryCurUnsavedState": "當前未保存狀態",
-  "detHistoryRevertAlert": "還原到這個狀態?",
-  "detHistoryRevertAlertBody": "你的當前狀態將被保存到歷史紀錄",
-  "detHistoryDeleteAlert": "刪除此歷史紀錄狀態?",
-  "detHistoryDeleteAlertBody": "你將無法還原它.",
-  "detHistoryDiscardChangesAlert": "放棄對記錄的更改?",
-  "detHistoryDiscardChangesAlertBody": "未保存的更改將會遺失，且將無法返回.",
+  "detHistoryCurUnsavedState": "當前尚未儲存的狀態",
+  "detHistoryRevertAlert": "還原到此狀態？",
+  "detHistoryRevertAlertBody": "您的當前狀態將被儲存到歷史紀錄中",
+  "detHistoryDeleteAlert": "刪除此歷史紀錄狀態？",
+  "detHistoryDeleteAlertBody": "此動作無法被還原。",
+  "detHistoryDiscardChangesAlert": "放棄對記錄的異動？",
+  "detHistoryDiscardChangesAlertBody": "未儲存的異動將會遺失，且將無法回復。",
   "detBackToList": "返回列表",
   "detSetIconColor": "更改顏色",
-  "detSetIcon": "更改圖標",
+  "detSetIcon": "更改圖示",
   "detDropAttachments": "拖放附件到此處",
   "detDelEntry": "刪除",
   "detDelEntryPerm": "永久刪除",
@@ -248,21 +260,23 @@
   "detAttachments": "附件",
   "detDelFromTrash": "從回收站中刪除嗎?",
   "detDelFromTrashBody": "刪除後將無法恢復.",
-  "detDelFromTrashBodyHint": "想要快速刪除回收站內所有內容,請點擊回收站菜單的清空圖標.",
+  "detDelFromTrashBodyHint": "想要快速刪除回收桶內所有內容，請點擊回收桶選單的清空鈕。",
   "detDelToTrash": "刪除此紀錄?",
   "detDelToTrashBody": "這紀錄將被移到回收資料夾中.",
   "detFieldCopied": "已複製",
   "detFieldCopiedTime": "複製 {} 秒",
-  "detCopyHint": "您可以通過點擊字段標題來複製字段值",
+  "detCopyHint": "您可以點擊標題以複製欄位內容",
   "detMore": "更多",
   "detClickToAddField": "點擊來添加新字段",
-  "detMenuAddNewField": "添加新字段",
+  "detMenuAddNewField": "增加新欄位",
+  "detMenuAddNewWebsite": "加入另一個網站",
   "detMenuShowEmpty": "顯示空字段",
   "detMenuHideEmpty": "隱藏空字段",
   "detMenuAddField": "添加 {}",
   "detMenuCopyPassword": "複製密碼",
   "detMenuCopyUser": "複製用戶名",
-  "detSetupOtp": "即棄密碼",
+  "detMenuCopyOtp": "複製 OTP（一次性密碼）",
+  "detSetupOtp": "一次性密碼",
   "detClone": "製作副本",
   "detCopyEntryToClipboard": "複製所有欄位",
   "detClonedName": "複製",
@@ -291,14 +305,33 @@
   "detOtpQrError": "QR code掃描錯誤",
   "detOtpQrErrorBody": "抱歉，我們無法讀取QR code，請重試，或通知程式作者有關本錯誤的資訊。",
   "detOtpQrWrong": "QR code不正確",
-  "detOtpQrWrongBody": "QR code讀取成功，但不含即棄密碼的資料。",
+  "detOtpQrWrongBody": "QR code 讀取成功，但不含一次性密碼相關資料。",
+  "detOtpField": "一次性密碼",
+  "detOtpClickToTouch": "點此顯示",
+  "detOtpGenerating": "請稍候...",
+  "detOtpTouch": "觸碰您的 {}",
+  "detLockField": "鎖定此欄，使其隱藏也不列入搜尋結果。若要檢視內容，必須手動點擊該欄。",
+  "detUnlockField": "解鎖此欄，使其立即顯示並且允許列入搜尋結果",
+  "detRevealField": "顯示",
+  "detHideField": "隱藏",
+  "detAutoTypeField": "自動輸入",
+  "detIssuesHideTooltip": "隱藏此警告",
+  "detIssueWeakPassword": "密碼強度較低，建議更改密碼。",
+  "detIssuePoorPassword": "密碼強度太低，建議您立刻更改密碼。",
+  "detIssuePwnedPassword": "根據 {}，此密碼已遭外洩，建議您更改密碼。",
+  "detIssuePasswordCheckError": "檢查密碼強度時出錯。",
+  "detIssueOldPassword": "此密碼太老舊",
+  "detIssueCloseAlertHeader": "隱藏密碼問題",
+  "detIssueCloseAlertBody": "要隱藏此警告，可選用下列方式：",
+  "detIssueCloseAlertEntry": "僅隱藏與此項相關的警告",
+  "detIssueCloseAlertSettings": "隱藏所有相關警告",
   "autoTypeEntryFields": "登入資料",
   "autoTypeModifiers": "更動輸入的按鍵",
   "autoTypeKeys": "功能鍵",
   "autoTypeLink": "更多...",
   "autoTypeError": "自動輸入錯誤",
   "autoTypeErrorGeneric": "自動輸入時發生錯誤：{}",
-  "autoTypeErrorGlobal": "要於其他程式使用快捷鍵，請將要輸入密碼的程式放到最前",
+  "autoTypeErrorGlobal": "若想使用快速鍵，則請將游標焦點放到要輸入密碼的地方",
   "autoTypeErrorNotInstalled": "未安裝 {}",
   "autoTypeHeader": "自動輸入：選取",
   "autoTypeMsgNoWindow": "我們無法獲取使用中視窗的標題，請自行搜尋紀錄",
@@ -306,7 +339,7 @@
   "autoTypeNoMatches": "無吻合紀錄",
   "autoTypeSelectionOtp": "一次性密碼",
   "appSecWarn": "不安全！",
-  "appSecWarnBody1": "你正使用不安全的連線載入本程式。可能有人正在監察你的活動和偷取你的密碼。我們強烈建議你停止載入，除非你明確知道你在做什麼。",
+  "appSecWarnBody1": "你正使用不安全的連線載入本程式。可能有人正在監察你的活動並偷取你的密碼。除非您很清楚自己正在做什麼，否則我們強烈建議你停止載入。",
   "appSecWarnBody2": "你的密碼庫的確已經加密，但無人可以保證你正使用的程式版本未經改裝。",
   "appSecWarnBtn": "我了解所面對的風險，並決定繼續",
   "appUnsavedWarn": "有修改未儲存！",
@@ -319,8 +352,8 @@
   "appSaveErrorBody": "未能自動儲存檔案",
   "appSaveErrorBodyMul": "未能自動儲存檔案：",
   "appSettingsError": "程式載入錯誤",
-  "appSettingsErrorBody": "載入程式設定時發生錯誤。請複查程式 URL，或通知你的管理員。",
-  "appNotSupportedError": "不支援你的瀏覽器",
+  "appSettingsErrorBody": "載入程式設定時發生錯誤。請檢查程式 URL，或通知你的管理員。",
+  "appNotSupportedError": "您的瀏覽器不支援某些此程式會用到的重要功能。",
   "appTabWarn": "標籤頁過多",
   "appTabWarnBody": "KeeWeb 不能同時在兩個瀏覽器標籤頁中使用,請關閉這個標籤頁.",
   "appRightsAlert": "正在鎖定 KeeWeb",
@@ -349,13 +382,17 @@
   "setGenExtractingUpdate": "提取更新中...",
   "setGenCheckErr": "下載新版本時發生錯誤",
   "setGenNeverChecked": "從未檢查更新",
-  "setGenRestartToUpdate": "重啓程式以更新",
+  "setGenRestartToUpdate": "重啓 KeeWeb 以更新",
   "setGenDownloadAndRestart": "下載更新並重啓",
   "setGenAppearance": "外觀",
   "setGenTheme": "主題",
+  "setGenThemeDefault": "預設",
+  "setGenThemeDark": "深色",
+  "setGenThemeLight": "淺色",
   "setGenThemeFb": "藍黑",
   "setGenThemeDb": "深啡",
   "setGenThemeTe": "錄黑",
+  "setGenThemeHighContrast": "高對比",
   "setGenThemeHc": "高對比",
   "setGenThemeSd": "湖水藍",
   "setGenThemeSl": "米白",
@@ -400,6 +437,19 @@
   "setGenTryBetaWarning": "檔案未儲存",
   "setGenTryBetaWarningBody": "請儲存所有檔案後再按這個按鈕",
   "setGenShowAppLogs": "顯示程式紀錄檔",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "不使用 Touch ID",
+  "setGenTouchIdMemory": "KeeWeb 執行中時，以 Touch ID 解鎖",
+  "setGenTouchIdPass": "超過一定時間後要求輸入主密碼",
+  "setGenAudit": "檢查",
+  "setGenAuditPasswords": "顯示密碼強度相關警告",
+  "setGenAuditPasswordEntropy": "檢查密碼長度及變化",
+  "setGenExcludePinsFromAudit": "不要檢查短的數字 PIN 碼（如 123456）",
+  "setGenCheckPasswordsOnHIBP": "使用線上服務 {} 檢查密碼",
+  "setGenAuditPasswordAge": "舊密碼",
+  "setGenAuditPasswordAgeOff": "不顯示舊密碼相關警告",
+  "setGenAuditPasswordAgeOneYear": "為超過 1 年未變更的舊密碼顯示警告",
+  "setGenAuditPasswordAgeYears": "為超過 {} 年未變更的舊密碼顯示警告",
   "setFilePath": "檔案路徑",
   "setFileStorage": "這個檔案讀取自 {} 。",
   "setFileIntl": "這個檔案儲存在程式內部空間。",
@@ -409,18 +459,25 @@
   "setFileSaveTo": "另存到...",
   "setFileClose": "關閉",
   "setFileSync": "同步",
+  "setFileSyncVerb": "同步",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "最後同步",
   "setFileLastSyncUnknown": "未知",
   "setFileSyncInProgress": "正在同步",
   "setFileSyncError": "同步錯誤",
   "setFilePass": "主密碼",
+  "setFileConfirmPass": "確認主密碼",
   "setFilePassChanged": "密碼已更改；留空此欄以使用舊密碼",
+  "setFilePassNotMatch": "密碼不相符，請重新輸入",
   "setFileKeyFile": "密鑰檔",
   "setFileSelKeyFile": "選取密鑰檔",
   "setFileNames": "名稱",
   "setFileDefUser": "預設帳戶名稱",
   "setFileEnableTrash": "啟用回收桶",
+  "setFileHistLimited": "自動刪除歷史記錄",
+  "setFileHistDisabled": "不要儲存歷史紀錄",
+  "setFileHistUnlimited": "保留歷史紀錄",
   "setFileHistLen": "每個紀錄保存的舊版本數量",
   "setFileHistSize": "每個歷史檔最大容量(MB)",
   "setFileBackups": "備份",
@@ -448,7 +505,7 @@
   "setFileGenKeyFile": "生成新的密鑰檔",
   "setFileDontUseKeyFile": "不要使用密鑰檔",
   "setFileEmptyPass": "空的密碼",
-  "setFileEmptyPassBody": "用空的密碼儲存密碼庫等於完全不受加密保護。決定要這樣做？",
+  "setFileEmptyPassBody": "儲存密碼庫卻不使用密碼，等於完全不加保護。確定真的要這樣做？",
   "setFileSaveError": "儲存錯誤",
   "setFileSaveErrorBody": "儲存至檔案時發生錯誤",
   "setFileAlreadyExists": "檔案已存在",
@@ -457,6 +514,13 @@
   "setFileUnsavedBody": "這個檔案裏有未儲存的變更",
   "setFileCloseNoSave": "放棄變更並關閉",
   "setFileDontClose": "不要關閉",
+  "setFileFormatVersion": "檔案格式",
+  "setFileExportRaw": "匯出密碼",
+  "setFileExportRawBody": "匯出的檔案將包含沒有加密的所有密碼，確定要繼續嗎？",
+  "setFileDeviceSettings": "設定",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "不使用 YubiKey",
+  "setFileYubiKeyHeader": "YubiKey",
   "setShTitle": "快捷鍵",
   "setShShowAll": "顯示所有項目",
   "setShColors": "顯示有顏色的項目",
@@ -474,7 +538,7 @@
   "setShSave": "儲存全部檔案",
   "setShGen": "生成密碼",
   "setShSet": "程式設定",
-  "setShCopyPassGlobal": "複製密碼（程式在背景時）",
+  "setShCopyPassGlobal": "複製密碼",
   "setShCopyOtp": "複製 OTP",
   "setShAutoTypeGlobal": "自動輸入",
   "setShCopyPassOnly": "複製密碼",
@@ -511,15 +575,40 @@
   "setPlTranslateLink": "翻譯本程式到你的語言",
   "setPlAutoUpdate": "自動更新",
   "setPlLoadGallery": "載入擴充套件庫",
+  "setBrowserTitle": "瀏覽器",
+  "setBrowserIntroDesktop": "KeeWeb 可以利用自動輸入的方式輸入密碼，不過安裝瀏覽器擴充套件可能用起來更方便。KeeWeb 支援兩類瀏覽器套件：",
+  "setBrowserIntroKeeWebConnect": "KeeWeb 官方套件，專為 KeeWeb 打造，不過也許不含某些另一個套件的好用功能。",
+  "setBrowserIntroKeePassXcBrowser": "KeePassXC 的套件，風行已久且穩定，不過並非為 KeeWeb 打造、可能多少有相容問題。",
+  "setBrowserIntroWeb": "安裝我們的瀏覽器套件，以便自此瀏覽器裡的 KeeWeb 分頁取用密碼、自動填入網站的登入欄位。點擊下載套件：",
+  "setBrowserNotEnabled": "尚未啟用瀏覽器整合功能，套件將無法連結  KeeWeb。點擊核取方塊來啟用整合功能：",
+  "setBrowserEnablePerBrowser": "點擊下列核取方塊，啟用瀏覽器整合功能：",
+  "setBrowserFocusIfLocked": "若瀏覽器套件嘗試連接時尚未開啟檔案，則打開 KeeWeb",
+  "setBrowserFocusIfEmpty": "若無法從該 URL 找到相應資料，則開啟選擇畫面",
+  "setBrowserOtherBrowsers": "其他瀏覽器",
+  "setBrowserExtensionNotSupported": "未支援",
+  "setBrowserExtensionHelp": "如何安裝？",
+  "setBrowserExtensionInstall": "安裝套件",
+  "setBrowserExtensionKPXCWarnBody1": "很抱歉，您無法將一個套件同時連結多個 Apps。若您選擇連結 KeeWeb，將斷開與其他 App 間的連結，也就是說 {} 相關整合將失效。即使未來您取消此核取方塊，也無法自動重新連回 {}。若要恢復設定，請前往 {} 的相關頁面修改瀏覽器整合設定。",
+  "setBrowserExtensionKPXCWarnBody2": "要將此套件連接 KeeWeb？",
+  "setBrowserSessions": "當前連線",
+  "setBrowserSessionsEmpty": "未連線",
+  "setBrowserSessionsIntro": "目前連結到 KeeWeb 的套件如下",
+  "setBrowserSessionsActiveTooltip": "啟用中連線",
+  "setBrowserSessionsActiveText": "此連線目前啟用中，可以根據下列權限取用 KeeWeb 資料：",
+  "setBrowserSessionsInactiveTooltip": "停用的連線",
+  "setBrowserSessionsInactiveText": "此連線目前已停用。該套件確實連結到 KeeWeb，不過未曾嘗試取用資料。一旦該套件嘗試取用資料，您將可選擇想分享的內容。",
+  "setBrowserSessionsDeniedTooltip": "拒絕存取",
+  "setBrowserSessionsDeniedText": "此連線目前已停用。該套件確實連結到 KeeWeb，但您已拒絕其存取資料。",
+  "setBrowserSessionsConnectedDate": "已連線",
   "setAboutTitle": "關於",
   "setAboutBuilt": "本程式使用了這些厲害的工具建設",
   "setAboutLic": "授權",
-  "setAboutLicComment": "本程式及其不屬於公有領域的組件均以 MIT license 授權。",
+  "setAboutLicComment": "除另有標註之外，本程式及其組件均以 MIT license 授權。",
   "setAboutFirst": "這是個開放原始碼的程式，創造者為 {}",
   "setAboutSecond": "並基於 {} 授權。",
   "setAboutSource": "原始碼和程式問題發佈在 {} 。",
   "setHelpFormat": "檔案格式",
-  "setHelpFormatBody": "本程式移植自 {} ，並使用 Web 技術搭建。它可以存取 KeePass 密碼庫格式 (.kdbx)。你可以在 KeePass 或本程式創立這種檔案 (密碼庫)。這個檔案格式是 100% 兼容於兩個程式，並可在任一個程式正常存取。",
+  "setHelpFormatBody": "本程式移植自 {} ，並使用 Web 技術搭建。它可以存取 KeePass 密碼庫格式 (.kdbx)。你可以在 KeePass 或本程式創立這種檔案 (密碼庫)。此檔案格式 100% 相容兩個程式，也能在任一個程式正常存取。",
   "setHelpProblems": "需要幫助？",
   "setHelpProblems1": "如果有什麼差錯，請 {}",
   "setHelpProblems2": "或者 {}",
@@ -531,7 +620,7 @@
   "setHelpWebApp": "網頁版程式",
   "setHelpUpdates": "最新消息",
   "setHelpTwitter": "程式的 Twitter",
-  "dropboxSetupDesc": "在自建程式使用 Dropbox 需要額外設定。請自行新增 Dropbox 程式，再在下面填寫程式密鑰。",
+  "dropboxSetupDesc": "在自建程式使用 Dropbox 需要額外設定。請自行建立 Dropbox 應用程式，再於下方填寫程式密鑰。",
   "dropboxAppKey": "Dropbox 程式密鑰",
   "dropboxAppKeyDesc": "從你的 Dropbox 程式(開發人員設定)複製密鑰",
   "dropboxFolder": "程式資料夾",
