--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -1,9 +1,15 @@
 {
+  "zh-TW": {
+    "name": "繁體中文",
+    "nameEn": "Chinese Traditional",
+    "count": 648,
+    "version": "1.11.0"
+  },
   "zh-CN": {
     "name": "简体中文",
     "nameEn": "Chinese Simplified",
     "count": 774,
-    "version": "1.22.0"
+    "version": "1.23.0"
   },
   "ja": {
     "name": "日本語",
@@ -15,6 +21,12 @@
     "name": "Português",
     "nameEn": "Portuguese",
     "count": 681,
+    "version": "1.9.0"
+  },
+  "cs": {
+    "name": "Čeština",
+    "nameEn": "Czech",
+    "count": 709,
     "version": "1.9.0"
   },
   "tr": {
@@ -45,7 +57,7 @@
     "name": "Українська",
     "nameEn": "Ukrainian",
     "count": 774,
-    "version": "1.23.0"
+    "version": "1.24.0"
   },
   "pt-BR": {
     "name": "Português (Brasil)",
@@ -80,8 +92,8 @@
   "ru-RU": {
     "name": "Русский",
     "nameEn": "Russian",
-    "count": 643,
-    "version": "1.28.0"
+    "count": 724,
+    "version": "1.29.0"
   },
   "es-ES": {
     "name": "Español",
