--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -5,7 +5,7 @@
   "title": "название",
   "password": "пароль",
   "user": "имя пользователя",
-  "website": "веб-сайт",
+  "website": "сайт",
   "tags": "теги",
   "notes": "заметки",
   "entry": "запись",
@@ -14,6 +14,7 @@
   "or": "или",
   "history": "история",
   "template": "шаблон",
+  "templates": "шаблоны",
   "notImplemented": "Не реализовано",
   "saveChanges": "Сохранить изменения",
   "discardChanges": "Отменить изменения",
@@ -36,7 +37,7 @@
   "oneMonth": "Один месяц",
   "oneYear": "Один год",
   "cache": "кэш",
-  "file": "Файл",
+  "file": "файл",
   "device": "устройство",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
@@ -46,6 +47,7 @@
   "menuColors": "Цвета",
   "menuTrash": "Корзина",
   "menuSetGeneral": "Основные",
+  "menuSetBrowser": "Браузер",
   "menuSetAbout": "О программе",
   "menuSetDevices": "Устройства",
   "menuAlertNoTags": "Нет тегов",
@@ -56,6 +58,22 @@
   "menuItemCollapsed": "Нажмите дважды, чтобы развернуть",
   "menuRestoreApp": "Открыть {}",
   "menuQuitApp": "Выйти из {}",
+  "sysMenuAboutKeeWeb": "О программе {}",
+  "sysMenuServices": "Сервисы",
+  "sysMenuHide": "Скрыть {}",
+  "sysMenuHideOthers": "Скрыть другие",
+  "sysMenuUnhide": "Показать все",
+  "sysMenuQuit": "Выйти из {}",
+  "sysMenuEdit": "Редактировать",
+  "sysMenuUndo": "Отменить",
+  "sysMenuRedo": "Повтор",
+  "sysMenuCut": "Вырезать",
+  "sysMenuCopy": "Скопировать",
+  "sysMenuPaste": "Вставить",
+  "sysMenuSelectAll": "Выделить все",
+  "sysMenuWindow": "Окно",
+  "sysMenuMinimize": "Минимизировать",
+  "sysMenuClose": "Закрыть окно",
   "alertYes": "Да",
   "alertNo": "Нет",
   "alertOk": "ОК",
@@ -64,6 +82,8 @@
   "alertCopy": "Скопировать",
   "alertClose": "Закрыть",
   "alertDoNotAsk": "Больше не спрашивать",
+  "alertAllow": "Разрешить",
+  "alertDeny": "Отклонить",
   "appBeta": "ПРЕДУПРЕЖДЕНИЕ: бета-версия, только для просмотра",
   "footerOpen": "Открыть / Создать",
   "footerSyncError": "Ошибка синхронизации",
@@ -123,6 +143,7 @@
   "keyChangeMessageExpired": "Действие мастер-ключа для этой базы данных закончилось. Введите новый ключ.",
   "keyChangeRepeatPassword": "Пароль еще раз",
   "keyEnter": "Вход",
+  "keyEsc": "Esc",
   "iconFavTitle": "Загрузить и использовать иконку сайта",
   "iconSelCustom": "Выбрать свою иконку",
   "listEmptyTitle": "Пусто",
@@ -162,7 +183,7 @@
   "openXml": "Импорт XML",
   "openCaps": "Caps Lock включен",
   "openClickToOpen": "Нажмите, чтобы открыть файл",
-  "openKeyFile": "Ключевой файл",
+  "openKeyFile": "файл ключа",
   "openKeyFileDropbox": "(из Dropbox)",
   "openDropHere": "перетащите файлы сюда",
   "openFailedRead": "Не удалось прочитать файл",
@@ -184,7 +205,7 @@
   "openUrl": "URL",
   "openUrlDesc": "https://server/path/file.kdbx, или просто file.kdbx",
   "openUser": "Логин",
-  "openUserDesc": "Пользователь сервера WebDAV (если требуется)",
+  "openUserDesc": "Пользователь WebDAV (если требуется)",
   "openUserPlaceholder": "нет логина",
   "openPass": "Пароль",
   "openPassDesc": "Пароль сервера WebDAV  (это не пароль к вашему файлу)",
@@ -193,6 +214,7 @@
   "openConfigErrorNotFound": "Файл не найден",
   "openError": "Ошибка",
   "openErrorDescription": "Ошибка при открытии файла",
+  "openErrorDescriptionMaybeTouchIdChanged": "Ошибка похожа на то, что обычно происходит при изменении настроек Touch ID, например, при добавлении или удалении пальца. Если это так, перейдите в «Настройки», отключите Touch ID и снова включите его.",
   "openErrorFileNotFound": "Файл не найден",
   "openListErrorBody": "При загрузке списка файлов произошла ошибка",
   "openShowAllFiles": "Показать все файлы",
@@ -201,6 +223,7 @@
   "openChalRespLoading": "Загрузка списка YubiKey-устройств",
   "openChalRespSelectYubiKey": "Выберите YubiKey который хотите использовать",
   "openChalRespErrorEmpty": "YubiKey не найден",
+  "openChalRespErrorEmptyMac": "В первый раз используете эту опцию на macOS? KeeWeb должен быть добавлен в мониторинг ввода, в настройках безопасности.",
   "detAttDownload": "Нажмите Shift и кликните по вложению чтобы загрузить или",
   "detAttDelToRemove": "Delete для удаления",
   "detAttSave": "Сохранить как ...",
@@ -249,6 +272,7 @@
   "detMore": "еще",
   "detClickToAddField": "щелкните, чтобы добавить новое поле",
   "detMenuAddNewField": "Добавить новое поле",
+  "detMenuAddNewWebsite": "Добавить другой сайт",
   "detMenuShowEmpty": "Показать пустые поля",
   "detMenuHideEmpty": "Скрыть пустые поля",
   "detMenuAddField": "Добавить {}",
@@ -300,12 +324,17 @@
   "detIssuePwnedPassword": "Этот пароль был скомпрометирован в результате утечки данных согласно {}, рекомендуется изменить его.",
   "detIssuePasswordCheckError": "При проверке надежности пароля произошла ошибка.",
   "detIssueOldPassword": "Старый пароль.",
+  "detIssueCloseAlertHeader": "Скрыть проблемы с паролем",
+  "detIssueCloseAlertBody": "Вы можете скрыть это предупреждение разными способами:",
+  "detIssueCloseAlertEntry": "Не показывать для этой записи",
+  "detIssueCloseAlertSettings": "Изменить глобальные настройки",
   "autoTypeEntryFields": "Поля ввода",
   "autoTypeModifiers": "Клавиши-модификаторы",
   "autoTypeKeys": "Ключи",
   "autoTypeLink": "подробнее...",
   "autoTypeError": "Ошибка автозаполнения",
   "autoTypeErrorGeneric": "Ошибка при выполнении автозаполнения: {}",
+  "autoTypeErrorAccessibilityMacOS": "Мы попытались отправить нажатия клавиш в приложение, но кажется это не сработало. Это могло произойти из-за отсутствия разрешений. Нажмите здесь, чтобы узнать больше:",
   "autoTypeErrorGlobal": "Для использования глобальных горячих клавиш, сделайте активным окно приложения, в котором хотите ввести пароль",
   "autoTypeErrorNotInstalled": "{} не установлен",
   "autoTypeHeader": "Автозаполнение: выберите",
@@ -317,6 +346,7 @@
   "autoTypeSelectionHintOpt": "Только введите имя пользователя",
   "autoTypeSelectionHintShift": "Другие поля",
   "autoTypeSelectionOtp": "Одноразовый пароль",
+  "autoTypeUnlockMessage": "Разблокировать для автоматического ввода",
   "appSecWarn": "Не безопасно!",
   "appSecWarnBody1": "Вы загрузили это приложение через незащищенное соединение. Кто-то может наблюдать за вами и украсть ваши пароли. Мы настоятельно рекомендуем вам остановиться, если вы четко не понимаете, что делаете.",
   "appSecWarnBody2": "Да, база данных зашифрована, но никто не может гарантировать, что приложение не было изменено в пути к вам.",
@@ -331,6 +361,7 @@
   "appSaveErrorBody": "Не удалось автоматически сохранить файл",
   "appSaveErrorBodyMul": "Не удалось автоматически сохранить файлы:",
   "appSaveErrorExitLoseChanges": "Выйти и потерять все изменения",
+  "appSaveErrorExitLoseChangesBody": "Вы можете выйти из приложения и потерять все изменения, или перейти в настройки файла, чтобы экспортировать данные",
   "appSettingsError": "Ошибка загрузки приложения",
   "appSettingsErrorBody": "Произошла ошибка при загрузке настроек приложения. Пожалуйста, дважды проверьте URL-адрес приложения или обратитесь к вашему администратору.",
   "appNotSupportedError": "Ваш браузер не поддерживает некоторые важные функции, которые мы используем.",
@@ -367,13 +398,25 @@
   "setGenAppearance": "Внешний вид",
   "setGenTheme": "Тема",
   "setGenThemeDefault": "По умолчанию",
+  "setGenThemeDark": "Темная",
+  "setGenThemeLight": "Светлая",
+  "setGenThemeBlue": "Flat blue",
   "setGenThemeFb": "Синяя",
+  "setGenThemeBl": "Light blue",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Темно-коричневая",
+  "setGenThemeLb": "Light brown",
+  "setGenThemeTerminal": "Terminal",
   "setGenThemeTe": "Терминал",
+  "setGenThemeLt": "Terminal light",
+  "setGenThemeHighContrast": "Высококонтрастная",
   "setGenThemeHc": "Высокая контрастность",
+  "setGenThemeDc": "Темный контраст",
+  "setGenThemeSol": "Solarized",
   "setGenThemeSd": "Выцветшая темная",
   "setGenThemeSl": "Выцветшая светлая",
   "setGenMoreThemes": "Другие темы",
+  "setGenAutoSwitchTheme": "Автоматически менять светлую и темную тему, когда это возможно",
   "setGenLocale": "Язык",
   "setGenLocOther": "другие языки доступны в качестве подключаемых модулей",
   "setGenFontSize": "Размер шрифта",
@@ -395,7 +438,7 @@
   "setGenAutoSyncTimer": "Автоматически сохранять и периодически синхронизировать",
   "setGenAutoSyncTimerOff": "Отключено",
   "setGenAutoSyncTimerInterval": "Каждые {} минуты",
-  "setGenRememberKeyFiles": "Запоминать ключевой файл",
+  "setGenRememberKeyFiles": "Запоминать файлы ключа",
   "setGenNoRememberKeyFiles": "Не запоминать",
   "setGenRememberKeyFilesData": "Хранить во внутреннем хранилище приложения",
   "setGenRememberKeyFilesPath": "Помнить только путь к ключевому файлу",
@@ -410,12 +453,15 @@
   "setGenClearSeconds": "Через {} секунд",
   "setGenClearMinute": "Через минуту",
   "setGenMinInstead": "Минимизировать приложение вместо закрытия",
+  "setGenMinOnFieldCopy": "Минимизировать после копирования поля",
   "setGenLock": "Авто-блокировка",
   "setGenLockMinimize": "Когда приложение свернуто",
   "setGenLockCopy": "После копирования пароля",
   "setGenLockAutoType": "После автозаполнения",
   "setGenLockOrSleep": "Когда компьютер заблокирован или отправлен в сон",
   "setGenStorage": "Хранилище",
+  "setGenDisableOfflineStorage": "Не кэшировать загруженные файлы в офлайн хранилище",
+  "setGenShortLivedStorageToken": "Использовать короткие сессии в облачных хранилищах",
   "setGenStorageLogout": "Выйти",
   "setGenShowAdvanced": "Показать дополнительные настройки",
   "setGenDevTools": "Показать средства разработки",
@@ -424,6 +470,7 @@
   "setGenTryBetaWarningBody": "Сохраните все файлы и снова нажмите эту кнопку",
   "setGenShowAppLogs": "Журнал приложения",
   "setGenReloadApp": "Перезагрузить приложение",
+  "setGenFieldLabelDblClickAutoType": "Автоматический ввод по двойному клику в названии полей",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Не использовать Touch ID",
   "setGenTouchIdMemory": "Разблокировка с помощью Touch ID только при запущенном KeeWeb",
@@ -431,8 +478,11 @@
   "setGenTouchIdPass": "Запрашивать мастер-пароль после",
   "setGenAudit": "Аудит",
   "setGenAuditPasswords": "Показывать предупреждения о надежности пароля",
+  "setGenAuditPasswordEntropy": "Проверить случайность и длину пароля",
   "setGenExcludePinsFromAudit": "Никогда не проверять короткие числовые PIN-коды, например 123456.",
   "setGenCheckPasswordsOnHIBP": "Проверить пароли с помощью онлайн-сервиса {}",
+  "setGenHelpHIBP": "KeeWeb может проверить, не были ли дискредитированы ваши пароли, используя онлайн сервис. Ваш пароль не может быть восстановлен на основе данных, отправленных по сети. Однако, количество проверенных паролей может быть раскрыто. Узнать больше о конфиденциальности при использовании этого сервиса можно здесь {}. Если опция включена, KeeWeb автоматически проверит пароли.",
+  "setGenHelpHIBPLink": "здесь",
   "setGenAuditPasswordAge": "Старые пароли",
   "setGenAuditPasswordAgeOff": "Не показывать предупреждения о старых паролях",
   "setGenAuditPasswordAgeOneYear": "Показывать предупреждения для паролей старше 1 года",
@@ -459,7 +509,7 @@
   "setFilePassChanged": "ваш пароль был изменен; оставьте поле пустым, чтобы использовать старый пароль",
   "setFilePassNotMatch": "пароли не совпадают, пожалуйста, введите еще раз",
   "setFileKeyFile": "Ключевой файл",
-  "setFileSelKeyFile": "Выберите ключевой файл",
+  "setFileSelKeyFile": "Выберите файл ключа",
   "setFileNames": "Название",
   "setFileDefUser": "Пользователь по умолчанию",
   "setFileEnableTrash": "Включить корзину",
@@ -490,11 +540,11 @@
   "setFileKdfParamsMem": "Память, КБ",
   "setFileKdfParamsPar": "Параллельность",
   "setFileKeyChangeForce": "Запросить изменение ключа после (дней)",
-  "setFileUseKeyFile": "Использовать ключевой файл",
-  "setFileUseGenKeyFile": "Использовать сгенерированный ключевой файл",
-  "setFileUseOldKeyFile": "Использовать прежний ключевой файл",
-  "setFileGenKeyFile": "Создать новый ключевой файл",
-  "setFileDontUseKeyFile": "Не использовать ключевой файл",
+  "setFileUseKeyFile": "Использовать файл ключа",
+  "setFileUseGenKeyFile": "Использовать сгенерированный файл ключа",
+  "setFileUseOldKeyFile": "Использовать старый файл ключа",
+  "setFileGenKeyFile": "Создать новый файл ключа",
+  "setFileDontUseKeyFile": "Не использовать файл ключа",
   "setFileEmptyPass": "Пустой пароль",
   "setFileEmptyPassBody": "Сохранение базы данных с пустым паролем делает ее полностью незащищенной. Вы действительно хотите это сделать?",
   "setFileSaveError": "Ошибка при сохранении",
@@ -514,6 +564,8 @@
   "setFileDontUseYubiKey": "Не использовать YubiKey",
   "setFileRefreshYubiKeyList": "Обновить список",
   "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Использование YubiKey как часть мастер-ключа может быть опасно, и вы можете потерять ваши пароли, если что-то пойдет не так. Хотите ли вы сделать копию вашего файла перед изменением этой настройки?",
+  "setFileYubiKeyErrorEmptyMac": "Кажется подключен YubiKey, но его не видно. Для доступа к ключам YubiKey KeeWeb должен быть добавлен в мониторинг ввода, в настройках безопасности.",
   "setShTitle": "Горячие клавиши",
   "setShShowAll": "показать все элементы",
   "setShColors": "показать элементы этого цвета",
@@ -569,6 +621,35 @@
   "setPlTranslateLink": "перевести приложение на ваш язык",
   "setPlAutoUpdate": "Обновлять автоматически",
   "setPlLoadGallery": "Загрузить галерею плагинов",
+  "setBrowserTitle": "Браузер",
+  "setBrowserIntroDesktop": "KeeWeb может вводить пароли используя автоматический ввод. Однако, расширение для браузера может быть более удобным. KeeWeb поддерживает два расширения:",
+  "setBrowserIntroKeeWebConnect": "официальное расширение KeeWeb, сделанное с учетом его функциональности. Но вы можете упустить некоторые дополнительные возможности, доступные в другом расширении.",
+  "setBrowserIntroKeePassXcBrowser": "это расширение разработано для KeePassXC. Давно существует и весьма надежно. Но данное расширение не часть KeeWeb, и из-за этого могут быть проблемы с совместимостью.",
+  "setBrowserIntroWeb": "Установите наше расширение для браузера, чтобы автоматически заполнять пароли из KeeWeb на разных страницах. Расширение может подключаться к вкладке KeeWeb в вашем браузере для поиска паролей. Нажмите здесь, чтобы загрузить его:",
+  "setBrowserNotEnabled": "Интеграция браузера не включена, расширения не могут подключится к KeeWeb. Используйте чекбоксы ниже, чтобы включить их:",
+  "setBrowserEnablePerBrowser": "Включить интеграцию с браузером используя чекбоксы ниже:",
+  "setBrowserFocusIfLocked": "Когда нет открытого файла, то открыть KeeWeb, если расширение для браузера пытается подключится",
+  "setBrowserFocusIfEmpty": "Показывать экран выбора записи, если нет совпадений по URL",
+  "setBrowserOtherBrowsers": "Другие браузеры",
+  "setBrowserExtensionFor": "для {}",
+  "setBrowserExtensionNotSupported": "Не поддерживается",
+  "setBrowserExtensionHelp": "Как установить?",
+  "setBrowserExtensionInstall": "Установить расширение",
+  "setBrowserExtensionKPXCWarnHeader": "{} перестал работать",
+  "setBrowserExtensionKPXCWarnBody1": "К сожалению, невозможно подключить одно расширение к нескольким приложениям. Если вы подключите расширение к KeeWeb, мы перезапишем его привязку к приложению, а это значит, что интеграция с {} перестанет работать. Даже если вы снимите этот чекбокс, связь с {} не будет восстановлена. Чтобы он снова заработал, настройте интеграцию браузера в настройках {}.",
+  "setBrowserExtensionKPXCWarnBody2": "Настроить расширение для использования KeeWeb?",
+  "setBrowserSessions": "Сессии",
+  "setBrowserSessionsEmpty": "Нет подключенных сессий.",
+  "setBrowserSessionsIntro": "Эти расширения сейчас подключены к KeeWeb.",
+  "setBrowserSessionsActiveTooltip": "Активная сессия",
+  "setBrowserSessionsActiveText": "Эта сессия активна. Она может обмениваться данными с KeeWeb, на основе этих разрешений:",
+  "setBrowserSessionsInactiveTooltip": "Неактивная сессия",
+  "setBrowserSessionsInactiveText": "Эта сессия неактивна. Расширение подключено к KeeWeb, но не пыталось обмениваться данными. Когда расширение запрашивает что-либо, вы можете выбрать, чем хотите поделиться.",
+  "setBrowserSessionsDeniedTooltip": "Доступ запрещен",
+  "setBrowserSessionsDeniedText": "Эта сессия неактивна. Расширение подключено к KeeWeb, но вы запретили доступ к данным.",
+  "setBrowserSessionsConnectedDate": "Подключена",
+  "setBrowserSessionsTerminate": "Закрыть эту сессию",
+  "setBrowserSessionsAccessToFiles": "Разрешить доступ к файлам",
   "setDevicesTitle": "Устройства",
   "setDevicesEnableUsb": "Включить взаимодействие с USB-устройствами",
   "setDevicesYubiKeyIntro": "Перед использованием YubiKey рекомендуется прочитать {}.",
